--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,6 +17,9 @@ tasks:
       bash /workspace/fusionauth-quickstart-javascript-react-web/install.sh   
       bash /workspace/fusionauth-quickstart-javascript-react-web/ports.sh
     command: |
+      pip3 install httpie 
+      mkdir ~gitpod/.config/httpie
+      cp .config/httpie/config.json ~gitpod/.config/httpie
       gp open intro.md
       fusionauth/bin/startup.sh
       echo "Waiting for the FusionAuth server to start up"
