--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,15 +18,12 @@ tasks:
     command: |
       gp open intro.md
       fusionauth/bin/startup.sh
+      echo "Waiting for the FusionAuth server to start up"
+      bash serverup.sh
       pip3 install httpie 
       mkdir ~gitpod/.config/httpie
       cp .config/httpie/config.json ~gitpod/.config/httpie
       gp open intro.md
-     
-
-  # --------------------------------------
-  - name: working-terminal
-    openMode: split-right
 
 ports:
   - port: 9011
