--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,7 @@ image:
   file: Dockerfile
 
 tasks:
+
   # ------------------------------------
   # Start FusionAuth in Docker
   # ------------------------------------
@@ -19,11 +20,20 @@ tasks:
       gp open intro.md
       fusionauth/bin/startup.sh
       echo "Waiting for the FusionAuth server to start up"
+      bash wait.sh
       pip3 install httpie 
       mkdir ~gitpod/.config/httpie
       cp .config/httpie/config.json ~gitpod/.config/httpie
-      bash serverup.sh
-      gp open intro.md
+      echo "Starting up the ChangeBank React application"
+      cd complete-application
+      npm install
+      npm run dev &
+      gp preview `gp url 9011`/admin
+     
+
+  # --------------------------------------
+  - name: working-terminal
+    openMode: split-right
 
 ports:
   - port: 9011
